--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 .header {
     width: 46.875rem;
     height: 21.438rem;
-    background-image: url("images/cover.jpg");
+    background-image: url("cover.jpg");
     background-size: cover;
     padding: 20px;
     color: #FFFFFF;
